// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`modals AlertModal renders correctly 1`] = `
<div
  className="modal style"
>
  <div
    className="overlay clickable"
    onClick={[Function]}
  />
  <div
    className="modal_contents"
  >
    <div
      className="alert_modal_contents"
    >
      <div
        className="alert_modal_heading"
      >
        heading
      </div>
      children
    </div>
    <div
      className="alert_modal_buttons"
    >
      <button
        className="button_outline alert_button"
        disabled={undefined}
        onClick={[Function]}
        title={undefined}
        type="button"
      >
        a
      </button>
      <button
        className="button_outline alert_button"
        disabled={undefined}
        onClick={[Function]}
        title={undefined}
        type="button"
      >
        b
      </button>
    </div>
  </div>
</div>
`;

exports[`modals ContinueModal renders correctly 1`] = `
<div
  className="modal"
>
  <div
    className="overlay clickable"
    onClick={[Function]}
  />
  <div
    className="modal_contents"
  >
    <div
      className="alert_modal_contents"
    >
      children
    </div>
    <div
      className="alert_modal_buttons"
    >
      <button
        className="button_outline alert_button"
        disabled={undefined}
        onClick={[Function]}
        title="Cancel"
        type="button"
      >
        Cancel
      </button>
      <button
        className="button_outline alert_button"
        disabled={undefined}
        onClick={[Function]}
        title="Continue"
        type="button"
      >
        Continue
      </button>
    </div>
  </div>
</div>
`;

exports[`modals Modal renders correctly 1`] = `
<div
  className="modal foo"
>
  <div
    className="overlay clickable"
    onClick={[Function]}
  />
  <div
    className="modal_contents"
  >
    children
  </div>
</div>
`;

exports[`modals ModalPage renders correctly 1`] = `
<div
  className="modal"
>
  <div
    className="overlay"
    onClick={undefined}
  />
  <header
    className="title_bar title_bar"
  >
    <button
      className="button_flat inverted"
      disabled={undefined}
      onClick={[Function]}
      title="Back"
      type="button"
    >
      <svg
        aria-hidden="true"
        className="icon"
        fill="currentColor"
        height={undefined}
        style={undefined}
        version="1.1"
        viewBox="0 0 24 24"
        width={undefined}
        x={undefined}
        y={undefined}
      >
        <path
          d="M15.429 17.019l-4.242-4.59 4.242-4.59-1.312-1.41-5.545 6 5.545 6z"
          fillRule="evenodd"
        />
      </svg>
      back
    </button>
    <div
      className="title_wrapper"
    >
      <h1
        className="title"
      >
        Title
      </h1>
      <span
        className="separator"
      >
        |
      </span>
      <h2
        className="subtitle"
      >
        Subtitle
      </h2>
    </div>
  </header>
  <div
    className="modal_contents"
  >
    children
  </div>
</div>
`;

exports[`modals Overlay renders correctly 1`] = `
<div
  className="overlay clickable"
  onClick={[Function]}
/>
`;
